--- a/index.html
+++ b/index.html
@@ -4,24 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
     <div id="container">
       <div class="playarea">
         <div class="counter">
           <h1 class="counter__current">0</h1>
-          <h4 class="counter__persec">2/сек</h4>
+          <h4 class="counter__persec">2/sec</h4>
         </div>
         <img src="assets/clicker.png" alt="Кликер" class="playarea__clicker" />
       </div>
       <div class="powerups">
-        <div class="powerup">Уничтожить Microsoft</div>
-        <div class="powerup">Сделать VSCode неиспользуемым</div>
-        <div class="powerup"></div>
-        <div class="powerup"></div>
-        <div class="powerup"></div>
-        <div class="powerup"></div>
+
+        Lorem ipsum dolor sit.
       </div>
     </div>
   </body>
